añadiendo img y md

--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -22,3 +22,12 @@ p {
     color: v.$blanco;
     font-size: 2rem;
 }
+
+.pag-name{
+    text-align: center;
+    margin: 5rem 0;
+    font-weight: v.$bold;
+}
+.desc-pag{
+ text-align: center;
+}
