añadiendo nuevas variables de colores

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -12,6 +12,13 @@ $rojo: #cb0000;
 $verde:#329f00;
 $negro: #1a1b15;
 
+// Principal
+$azureish-white: #e2eaf3;
+$columbia-blue: #ccdce9;
+$purple-navy: #494f88;
+$space-cadet: #1f255e;
+$blue-crayola: #2f73fe;
+
 $blanco: #FFFFFF;
 $gris: #e1e1e1;
 
