creacion de vista para crear cuenta

--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -27,7 +27,11 @@ p {
     text-align: center;
     margin: 5rem 0;
     font-weight: v.$bold;
+    color: v.$purple-navy;
 }
 .desc-pag{
- text-align: center;
+    text-align: center;
+    color: v.$purple-navy;
+
+
 }
