creando vista para recuperar cuenta

--- a/src/scss/componentes/_formulario.scss
+++ b/src/scss/componentes/_formulario.scss
@@ -1,6 +1,11 @@
 @use 'base/variables'as v;
 @use 'base/mixins' as m;
 
+
+// .formulario{
+//     margin-top: 5rem;
+    
+// }
 .campo{
     display: flex;
     margin-bottom:  2rem;
