envio de email a mailtrap

--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -10,7 +10,7 @@
 
     .img{
         height: 20rem;
-        background-image: url(../img/coyote-portada.jpg);
+        background-image: url(../img/portada-inicio.jpg);
         background-size: cover;
         background-position: center center;
         @include m.tablet{
