--- a/src/scss/componentes/_formulario.scss
+++ b/src/scss/componentes/_formulario.scss
@@ -18,5 +18,11 @@
         border: none;
         padding: calc(v.$separacion / 4);
         border-radius: 1rem;
+
+        &:disabled{
+            background-color: lighten($color: v.$negro, $amount: 80);
+            color: v.$space-cadet;
+            cursor: not-allowed;
+        }
     }
 }
