--- a/src/scss/layout/_cita.scss
+++ b/src/scss/layout/_cita.scss
@@ -3,13 +3,15 @@
 
 .seccion{
     padding: 4rem 0;
-
+    display: none;
     .text-center{
         text-align: center;
     }
 
-    &:nth-child(3),
-    &:nth-child(4){
+    .mostrar{
+        display: block;
+    }
+    .ocultar{
         display: none;
     }
 
