--- a/src/scss/componentes/_btns.scss
+++ b/src/scss/componentes/_btns.scss
@@ -6,3 +6,7 @@
     @include m.boton(v.$space-cadet, v.$blanco);
     border-radius: .5rem;
 }
+
+.btn-eliminar{
+    @include m.boton(v.$rojo, v.$blanco);
+}
