--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -40,3 +40,17 @@
         margin: 0;
     }
 }
+
+.barra-servicios{
+    margin-bottom: v.$separacion;
+
+    @include m.tablet{
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .btn{
+        margin: 0 0 1rem 0;
+    }
+}
