--- a/src/scss/layout/_admin.scss
+++ b/src/scss/layout/_admin.scss
@@ -20,4 +20,12 @@
 
 .servicios{
     @extend .citas;
+
+    .acciones{
+        margin: 0;
+    }
+    .btn,
+    .btn-eliminar{
+        margin: 0;
+    }
 }
